# BTP

./: README.md
codes/cpuNaive/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
codes/cpuNaive/data/: plot.py
codes/cpuNaive/include/: ACO.h  Graph.h  debug.h  keyValueStore.h
codes/cpuNaive/src/: ACO.cpp  Graph.cpp  bkp.cpp  cpuNaive.cpp  debug.cpp  keyValueStore.cpp  main.cpp  regression.cpp  regression_multithread.cpp
codes/gitRepo/codes.git/: config  packed-refs
codes/imp1/: CMakeLists.txt
codes/imp1/include/: :w  ACO.h  Graph.h  commons.h  configGenerator.h  configGraph.h  configNode.h  configNodeIterator.h  configNodeStorage.h  config_generator.h  config_node.h  constants.h  graph.h
codes/imp1/src/: Graph.cpp  a.out  commons.cpp  configGraph.cpp  configNode.cpp  configNodeIterator.cpp  configNodeStorage.cpp  configNodeStorage.h  config_node.cpp  gen  genGraph.cpp  gen_graph.cpp  graph.cpp  tmp  tmp_gen_graph.cpp
codes/imp1/tmp/: 2mt.cpp  __time.cpp  a.out  tmp.cpp  tmp2.cpp
codes/imp2/.metadata/: version.ini
codes/imp2/graph_aco/: .cproject  (+2 more)
codes/meBtp/: .project  pom.xml
codes/tmp/: a.out  tmp.cpp
external_obj/cudpp_bkp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
external_obj/graph500-2.1.4/: .gitignore  COPYING  Graph500.html  Graph500.org  Makefile  README  compat.h  graph500.c  graph500.h  kronecker.c  kronecker.h  make-edgelist.c  options.c  options.h  prng.c  prng.h  rmat.c  rmat.h  timer.c  timer.h  verify.c  verify.h  xalloc.c  xalloc.h
latex_docs/: idea.aux  idea.tex
(+195 files in other folders)
